<resources>
    <string name="app_name">STalk</string>
    <string name="action_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Your Phone</string>
    <string name="verification_login_fragment_label">Verification</string>
    <string name="account_initial_fragment_label">Account Initial</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_notice">Please confirm your country code and enter your phone number.</string>
    <string name="re_check_phone_number">Something wrong. Please re-check your phone number.</string>
    <string name="enter_code">Enter Code</string>
    <string name="sent_otp_notice">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="did_not_get_code">Didn\'t get the code?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fist_name_required">First name (required)</string>
    <string name="last_name_required">Last name (required)</string>
    <string name="invalid_firstname">Invalid First Name</string>
    <string name="invalid_lastname">Invalid Last Name</string>
    <string name="fail_to_create_user">Fail to create user. Please check again!</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="menu_new_group">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="menu_saved_messages">Saved Messages</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="menu_stalk_feature">STalk Features</string>
    <string name="menu_contacts">Contacts</string>
    <string name="action_sort_by_alpha">Sort By Alpha</string>
    <string name="sorted_by_name">Sorted by name</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_delete_chat">Delete chat</string>
    <string name="action_change_color">Change color</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="selected">selected</string>
    <string name="invalid_image">Invalid Image</string>
    <string name="insert_group_name">Group name is required.</string>
    <string name="menu_invite_friend">Invite Friend</string>
    <string name="no_phone_contact">Contact list is empty!</string>
    <string name="invite_to_stalk">INVITE TO STALK</string>
    <string name="you_must_select_contact">You must select aleast one contact</string>
    <string name="welcome_to_stalk">\"Welcome to STalk!\"</string>
    <string name="find_friend">Find Friend</string>
    <string name="user_not_exist">User not exit</string>
    <string name="menu_find_friend">Find Friend</string>
    <string name="no_friend">You have no friend. Please add someone!</string>
    <string name="account">Account</string>
    <string name="set_profile_photo">Set Profile Photo</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="user_name">Username</string>
    <string name="bio">Bio</string>
    <string name="add_a_few_words_about_yourself">Add a few words about yourself</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_username">Your Username</string>
    <string name="desc_change_user_name">You can choose a username on STalk.</string>
    <string name="username_is_required">Username is required!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm_logout">Do you want to logout?</string>
    <string name="confirm_change_photo">Do you want to change photo?</string>
</resources>