<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_divider" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_group"
            android:icon="@drawable/ic_new_group_24"
            android:title="@string/menu_new_group" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact_24"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_saved_messages"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/menu_saved_messages" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_stalk_feature"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/menu_stalk_feature" />
    </group>
</menu>