<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_baseline_more_vert_24"
        app:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_clear_history"
                android:orderInCategory="100"
                android:icon="@drawable/ic_baseline_clear_all_24"
                android:title="@string/action_clear_history"
                app:showAsAction="never|withText" />

            <item
                android:id="@+id/action_delete_chat"
                android:orderInCategory="100"
                android:icon="@drawable/ic_baseline_delete_24"
                android:title="@string/action_delete_chat"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_change_color"
                android:orderInCategory="100"
                android:icon="@drawable/ic_baseline_color_lens_24"
                android:title="@string/action_change_color"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>