<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main_closed"
    tools:context=".home.ui.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dimen_8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:paddingStart="@dimen/dimen_12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_person_24"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="@dimen/dimen_8dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="Name"/>

        </LinearLayout>

        <TextView
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_update_avatar"
            android:paddingStart="@dimen/dimen_12dp"
            android:text="@string/set_profile_photo"
            android:textSize="12sp"
            android:background="@color/background_main"
            android:gravity="center_vertical"
            android:textColor="@color/teal_700"
            app:drawableLeftCompat="@drawable/ic_camera_xml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_12dp"
            android:orientation="vertical"
            android:background="@color/background_main"
            android:layout_marginTop="@dimen/dimen_8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/main"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_phone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:text="0123456578"
                    android:id="@+id/tv_phone_number"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_4dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_user"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hai"
                    android:id="@+id/tv_user_name"
                    android:paddingTop="@dimen/dimen_16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_4dp"
                    android:text="@string/user_name"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_bio"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_16dp"
                    android:text="@string/bio"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_few_words_about_yourself"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/dimen_4dp"
                    android:id="@+id/tv_bio"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="Logout"
            android:id="@+id/logout"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#FF0000"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>