<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_question_answer_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_code"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/sent_otp_notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Phone Number"
            android:textSize="14sp"/>

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/et_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:layout_marginTop="30dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number|textPassword"
            android:layoutDirection="ltr"
            android:maxLength="6"
            android:textIsSelectable="false"
            app:pinCharacterSpacing="5dp"
            android:textSize="20sp"
            app:pinAnimationType="popIn"
            app:pinLineColors="@color/main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/main"
            android:text="@string/did_not_get_code"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>